--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
         </head>
         <body>
             <h1>Nicholas Taylor</h1>
+            <h3>Baseball</h3>
+            <p>
+                I enjoy the <b> sport </b> because it is my favorite to
+                go and watch in person. There are many <b> memories </b> 
+                that I have on a baseball field.
+            </p>
         </body>
 </html>
