--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
                 go and watch in person. There are many <b> memories </b> 
                 that I have on a baseball field.
             </p>
+            <hr>
+            <h3>Ordered List</h3>
+            <ol>
+                Mookie Betts
+                Freddie Freeman
+                Walker Buehler
+            </ol>
         </body>
 </html>
