--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <hr>
             <h3>Ordered List</h3>
             <ol>
-                Mookie Betts
-                Freddie Freeman
-                Walker Buehler
+                <li> Mookie Betts </li>
+                <li> Freddie Freeman </li>
+                <li> Walker Buehler </li>
             </ol>
         </body>
 </html>
