--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
                 <li> Freddie Freeman </li>
                 <li> Walker Buehler </li>
             </ol>
+            <ul>
+                <li> Toronto Blue Jays </li>
+                <li> Boston Red Sox </li>
+                <li> Seattle Mariners </li>
+            </ul>
         </body>
 </html>
