added about me and link to about me in index

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
                 <li> Boston Red Sox </li>
                 <li> Seattle Mariners </li>
             </ul>
+            <a href="/index.html"> My About Me</a>
         </body>
 </html>
