fixed link to about me

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
                 <li> Boston Red Sox </li>
                 <li> Seattle Mariners </li>
             </ul>
-            <a href="44563-webapps-assignment-3-NTaylor29\index.html"> My About Me</a>
+            <a href="aboutme.html"> My About Me</a>
         </body>
 </html>
