changed image link

--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@
             is probably just the most memorable out of the ones I've 
             ever read.
         </p>
-        <img src="Screenshot 2023-02-08 at 3.20.01 PM.png"
+        <img src="mockingbird.jpg"
         height="200" width="100" alt="To Kill a Mockingbird">
     </body>
 </html>
