--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@
             is probably just the most memorable out of the ones I've 
             ever read.
         </p>
-        <img src="mockingbird.jpg"
+        <img src="44563-webapps-assignment-3-NTaylor29/mockingbird.jpg"
         height="200" width="100" alt="To Kill a Mockingbird">
     </body>
 </html>
