added country table

--- a/index.html
+++ b/index.html
@@ -24,5 +24,38 @@
                 <li> Seattle Mariners </li>
             </ul>
             <a href="aboutme.html"> My About Me</a>
+            <hr>
+            <h3>Table of Countries to Visit</h3>
+            <p>
+                I have never been outside the United States,
+                but I can recommend some based on pictures I have seen.
+            </p>
+            <table>
+                <tr>
+                    <th>Country</th>
+                    <th>Reasoning</th>
+                    <th>Days</th>
+                </tr>
+                <tr>
+                    <td>Canada</td>
+                    <td>cold</td>
+                    <td>7</td>
+                </tr>
+                <tr>
+                    <td>UK</td>
+                    <td>they talk weird</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>Mexico</td>
+                    <td>cheap</td>
+                    <td>14</td>
+                </tr>
+                <tr>
+                    <td>Italy</td>
+                    <td>Eiffel Tower</td>
+                    <td>21</td>
+                </tr>
+            </table>
         </body>
 </html>
