--- a/index.html
+++ b/index.html
@@ -57,5 +57,19 @@
                     <td>21</td>
                 </tr>
             </table>
+            <hr>
+            <h3>Code Snippet</h3>
+            <blockquote cite="https://stackoverflow.com/questions/5002111/how-to-strip-html-tags-from-string-in-javascript"> 
+                How can I strip the HTML from a string in JavaScript?
+            </blockquote>
+            <pre> const originalString = `
+                <div>
+                  <p>Hey that's <span>somthing</span></p>
+                </div>
+              `;
+              
+              const strippedString = originalString.replace(/(<([^>]+)>)/gi, "");
+              
+              console.log(strippedString); </pre>
         </body>
 </html>
