added overflow link

--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
             <hr>
             <h3>Code Snippet</h3>
             <blockquote cite="https://stackoverflow.com/questions/5002111/how-to-strip-html-tags-from-string-in-javascript"> 
-                How can I strip the HTML from a string in JavaScript?
-            </blockquote>
-            <pre> const originalString = `
+            How can I strip the HTML from a string in JavaScript? </blockquote>
+            <a href="https://stackoverflow.com/questions/5002111/how-to-strip-html-tags-from-string-in-javascript">Stackoverflow link</a>
+            <pre> 
+                const originalString = `
                 <div>
                   <p>Hey that's <span>somthing</span></p>
                 </div>
@@ -70,6 +71,7 @@
               
               const strippedString = originalString.replace(/(<([^>]+)>)/gi, "");
               
-              console.log(strippedString); </pre>
+              console.log(strippedString); 
+            </pre>
         </body>
 </html>
